--- a/profile.html
+++ b/profile.html
@@ -5,4 +5,30 @@
             Phakin seesunon
         </title>
     </head>
+    <body>
+       <img src="asssint/phakin.jpg" >
+       <h1> Phakin seesunon </h1>
+       <ul>
+        <li>กำลังศึกษาอยู่ชั้นมัธยมศึกาาปีที่5</li>
+       </ul>
+       <a href="https://www.patum.ac.th/">
+        โรงเรียนปทุมราชวงศา
+
+       </a>
+    <h2>
+<table>
+        <tr>
+            <td>ผลงาน</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2024</td>
+            <td>ทำเครื่องแรกขวดสำเร็จ</td>
+            <td></td>
+        </tr>
+    </table>
+    </h2>
+    
+
+    </body>
 </html>
