--- a/profile.html
+++ b/profile.html
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
-            Phakin seesunon
+            Phakin
         </title>
+        <link rel="stylgzesheet" href="./styles/profile.style.css">
     </head>
     <body>
-       <img src="asssint/phakin.jpg" >
-       <h1> Phakin seesunon </h1>
-       <ul>
-        <li>กำลังศึกษาอยู่ชั้นมัธยมศึกาาปีที่5</li>
-       </ul>
-       <a href="https://www.patum.ac.th/">
-        โรงเรียนปทุมราชวงศา
-
-       </a>
-    <h2>
-<table>
-        <tr>
-            <td>ผลงาน</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2024</td>
-            <td>ทำเครื่องแรกขวดสำเร็จ</td>
-            <td></td>
-        </tr>
-    </table>
-    </h2>
-    
-
+        <div class="profile_detail">
+            <img src="asssint/phakin.jpg" height="200px"/>
+            <div class="profile_card">
+                <h1>ภคิน สีสุนนท์</h1>
+                <ul>
+                    <li>
+                        กำลังศึกษาอยู่ชั้นมัธยมศึกษาปีที่ 5
+                    </li>
+                    <li>
+                        เลขที่ 4
+                    </li>
+                </ul>
+                <a href="https://www.patum.ac.th/">
+                    โรงเรียนปทุมราชวงศา
+                </a>
+            </div>
+        </div>
+        <hr>
+        <div class="profile_table">
+            <div class="profile_table_detail">
+                <h2>ผลงานที่ภาคภูมิใจ</h2>
+                <table>
+                    <tr>
+                        <td>ปีการศึกษา</td>
+                        <td>ชื่อผลงาน</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>ชนะเลิศฟุตบอลสภา</td>
+                    </tr>
+                    <tr>
+                        <td>2024</td>
+                        <td>ทำเครื่องแรกขวดสำเร็จ</td>
+                    </tr>
+                    
+                </table>
+            </div>
+        </div>
     </body>
 </html>
